# Yield-Estimation

./: README.md  sample-data.txt  team_info.txt
backend/: .gitignore  create_geospatial_index.py  database.py  get_nearby_districts.py  main.py  predict-curl.sh  pyproject.toml
backend/core/: constant.py  predict.py
backend/core/_pycache_/: get_agri_data.cpython-312  get_nearby_field.cpython-312
backend/model/: dataset.csv  xgb_crop_yield_model.json
backend/routes/: complaint.py  dashboard.py  llm.py  maps.py  predict.py  predict_guj.py
final-data/maize/: crop_mask_mainze_IN.csv  fpar_maize_in_yearly.csv  maize_mergedf_yearly.csv  meteo_maize_in_yearly.csv  ndvi_maize_in_yearly.csv  soil_maize_IN.csv  soil_moisture_maize_in_yearly.csv  yield_maize_IN.csv
final-data/wheat/: crop_mask_wheat_IN.csv  fpar_wheat_in_yearly.csv  meteo_wheat_in_yearly.csv  ndvi_wheat_in_yearly.csv  soil_moisture_wheat_in_yearly.csv  soil_wheat_IN.csv  wheat_merged_yearly.csv  yield_wheat_IN.csv
frontend/: package.json  pnpm-lock.yaml
frontend/src/: main.tsx
frontend/src/components/: Header.tsx  LanguageSwitcher.tsx
frontend/src/components/ui/: table.tsx
frontend/src/locales/en/: translation.json
frontend/src/locales/hi/: translation.json
frontend/src/routes/: _root.tsx  check.tsx  complaint.tsx  index.tsx  map.tsx  predict.tsx
