[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cerebras-cloud-sdk>=1.59.0",
    "fastapi[standard]>=0.123.9",
    "matplotlib>=3.10.7",
    "mercantile>=1.2.1",
    "motor>=3.7.1",
    "pandas>=2.3.3",
    "pillow>=12.0.0",
    "pymongo>=4.15.5",
    "rasterio>=1.4.3",
    "requests>=2.32.5",
    "scikit-learn==1.6.1",
    "titiler-core>=0.26.0",
    "titiler-extensions>=0.26.0",
    "xgboost>=3.1.2",
]
